# procedural-railroads

./: Cargo.toml  LICENSE
assets/: models.assets  models.assets.ron  textures.assets  textures.assets.ron
assets/models/: gondola_wagon.glb  track.glb  wagon_bogie.glb
assets/models/blend/: curveextrusion_and_track_crosssection.blend  gondola_wagon.blend  gondola_wagon.blend1  track.blend  track.blend1  wagon_bogie.blend  wagon_bogie.blend1
assets/shaders/: functions.wgsl  line_material.wgsl  terrain_texturing.wgsl
src/: assets.rs  lines.rs  main.rs  noise.rs  road_generator.rs  terrain_generator.rs
src/rolling_stock/: bogie_systems.rs  components.rs  mod.rs  ui_systems.rs  utils.rs  wagon_systems.rs
src/world/: mod.rs  route_gen.rs  terrain.rs  train_tracks.rs  utils.rs
