[package]
name = "bevy-procedural-world"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic", "jpeg"] }
bevy_flycam = "0.9.0"
bevy_atmosphere = { version = "0.5.0", features = ["nishita"] }
noisy_bevy = "0.2.0"
futures-lite = "1.12.0"
bevy_egui = "0.18.0"
bevy_mod_picking = "0.11.0"
bevy_extrude_mesh = { path = "../bevy-extrude-mesh" }
bevy_asset_loader = { version = "0.14.1", features = ["standard_dynamic_assets"] }