[package]
name = "bevy-procedural-world"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking", "jpeg"] }
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam.git", branch="bevy_0.11" }
bevy_atmosphere = { version = "0.7.0", features = ["nishita"] }
noisy_bevy = "0.4.0"
futures-lite = "1.12.0"
bevy_egui = "0.21.0"
bevy_mod_picking = "0.15.0"
bevy_extrude_mesh = { path = "../bevy-extrude-mesh" }
bevy_asset_loader = { version = "0.17.0", features = ["standard_dynamic_assets"] }
