[package]
name = "bevy-procedural-world"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking", "jpeg"] }
bevy_flycam = "0.14.1"
bevy_atmosphere = { version = "0.10.0", features = ["nishita"] }
noisy_bevy = "0.7.0"
futures-lite = "2.3.0"
bevy_egui = "0.29.0"
bevy_mod_picking = "0.20.1"
bevy_extrude_mesh = { git = "https://github.com/gzhynko/bevy-extrude-mesh.git" }
bevy_asset_loader = { version = "0.21.0", features = ["standard_dynamic_assets"] }
